@@ -1,6 +1,6 @@
 sdesc: "A program for printing sheet music"
 category: Publishing
-requires: ash bash guile python tetex-beta texmf-tiny
+requires: ash bash guile gsview python tetex-beta texmf-tiny
 #suggests: rxvt xdvi texmf-base
 ldesc: "A program for printing sheet music.
 LilyPond is a music typesetter.  It produces beautiful sheet music
